# iFCN

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/autopr/: CMakeLists.txt  astar.cpp  astar.h  circuitGraph.cpp  circuitGraph.h  crossgraph.hpp  genetic.cpp  genetic.h  gridCell.cpp  gridCell.h  individual.cpp  individual.h  mapping.cpp  mapping.h  mortonGrid.cpp  mortonGrid.h  node.cpp  node.h  parse.cpp  parse.h  patterns.cpp  patterns.h  phaseSolver.cpp  phaseSolver.h
include/simon/: CMakeLists.txt  EnergyAnalysis.hpp  IO.hpp  Model.hpp  Option.hpp  Simulation.hpp  Util.hpp  simon.hpp
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Model.h  QCADCellItem.cpp  QCADCellItem.h  QCADClockScheme.cpp  QCADClockScheme.h  QCADScene.cpp  QCADScene.h  QCADView.cpp  QCADView.h  SimulationManager.cpp  SimulationManager.h  VerilogHandler.cpp  VerilogHandler.h  config.h  main_gui.cpp
src/images/: images.qrc
src/widgets/: Arrow.cpp  Arrow.h  CircuitItem.cpp  CircuitItem.h  CustomStatusBar.cpp  CustomStatusBar.h  GaChessboardInputDialog.cpp  GaChessboardInputDialog.h  LayerComboBox.cpp  LayerComboBox.h  plotWidget.cpp  plotWidget.h  typewindow.cpp  typewindow.h  waveformwindow.cpp  waveformwindow.h
tests/: ApplicationTest.cpp  CMakeLists.txt  EnergyAnalysisUnitTest.cpp  IOUnitTest.cpp  ModelUnitTest.cpp  SimulationUnitTest.cpp
tests/benchmark/: config.cfg  maj-4.nml
tests/benchmarks/: mux41.v  test.v
tests/benchmarks/ISCAS85/: c432.v
tests/benchmarks/MAJ/: 1bitAdderAOIG.v  xnor2.v
tests/benchmarks/TOY/: c17.v  clpl.v  mux41.v  xor5R.v
